--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,11 @@
     <artifactId>microservices-new</artifactId>
     <packaging>pom</packaging>
     <version>0.0.1-SNAPSHOT</version>
+    <modules>
+        <module>product-service</module>
+        <module>order-service</module>
+        <module>inventory-service</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
